<resources>
    <string name="app_name">Otter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to main activity -->
    <string name="otter_title">OTTER</string>
    <string name="slogan">Don\'t drift apart.</string>


    <!-- Strings related to tabs -->
    <string name="challenges">Challenges</string>
    <string name="chat">Chat</string>
    <string name="countdown">Countdown</string>
    <string name="community">Community</string>
    <string name="goals">Goals</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
