<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fromdusktilldawn.otter.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/Otter"
        android:layout_width="112dp"
        android:layout_height="60dp"
        android:text="@string/otter_title"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:typeface="sans" />

    <TextView
        android:id="@+id/slogan."
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="286dp"
        tools:text="@string/slogan" />

    <android.support.design.widget.TabLayout
        android:layout_width="386dp"
        android:layout_height="48dp"
        android:background="@color/grey"
        android:contextClickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorColor="@color/otterSalmon"
        tools:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteY="1dp">

        <android.support.design.widget.TabItem
            android:id="@+id/Challenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenges" />

        <android.support.design.widget.TabItem
            android:id="@+id/Chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat" />

        <android.support.design.widget.TabItem
            android:id="@+id/Countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countdown" />

        <android.support.design.widget.TabItem
            android:id="@+id/Community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community" />

        <android.support.design.widget.TabItem
            android:id="@+id/Goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals" />
    </android.support.design.widget.TabLayout>

</android.support.constraint.ConstraintLayout>
